# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: make_lint.yml
brain_games/: cli.py  game_engine.py  game_expression.py  game_expression_calculation.py  game_is_even.py  game_iseven.py  game_settings.py
brain_games/game_engine/: game_engine.py
brain_games/games/: calc.py  even.py  expression.py  game_expression.py  game_gcd.py  game_iseven.py  game_prime.py  game_progression.py  game_settings.py  gcd.py  iseven.py  prime.py  progression.py
brain_games/scripts/: .brain_games.py.swp  __init__.py  brain-even.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
games/: __init__.py  game_iseven.py
