[tool.poetry]
packages = [
 { include = "brain_games" },
]
name = "GovindaChandra_brain_games"
version = "0.2.1"
description = ""
authors = ["Sergey Toylyev <doyalnitay@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.0"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

